Domain Shared | Student Model
Creadas varias clases de Dominio comunes y comenzando a modelar la entidad Student

--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
         <!-- coverage report -->
         <jacoco.version>0.8.7</jacoco.version>
         <!-- various -->
-        <jwt.version>3.12.0</jwt.version>
+        <jwt.version>3.18.2</jwt.version>
         <itextpdf.version>7.0.2</itextpdf.version>
-        <openapi.version>1.4.8</openapi.version>
+        <openapi.version>1.6.3</openapi.version>
     </properties>
 
     <dependencies>
@@ -53,13 +53,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>${openapi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-webflux-ui</artifactId>
+            <version>${openapi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <!-- Validation-->
         <dependency>
